try prettier cli

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "pt": "prettier --write --parser=php"
+        "ptp": "prettier --write --parser=php",
+        "pt": "prettier --write "
+
     },
     "devDependencies": {
         "@prettier/plugin-php": "^0.14.3",
@@ -19,7 +21,7 @@
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
-        "prettier": "^2.1.2",
+        "prettier": "2.1.2",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
